--- a/typescript-curso/package.json
+++ b/typescript-curso/package.json
@@ -14,9 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^6.0.0",
+    "lite-server": "^2.6.1",
     "typescript": "^4.2.2"
-  },
-  "dependencies": {
-    "lite-server": "^2.6.1"
   }
 }
