--- a/typescript-curso/tsconfig.json
+++ b/typescript-curso/tsconfig.json
@@ -3,7 +3,11 @@
     "outDir": "dist/js",
     "target": "ES6",
     "noEmitOnError": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "removeComments": true,
+    "strictNullChecks": true
   },
-  "include": ["app/**/*"]
+  "include": [
+    "app/**/*"
+  ]
 }
