--- a/typescript-curso/tsconfig.json
+++ b/typescript-curso/tsconfig.json
@@ -1,13 +1,12 @@
 {
-  "compilerOptions": {
-    "outDir": "dist/js",
-    "target": "ES6",
-    "noEmitOnError": true,
-    "noImplicitAny": true,
-    "removeComments": true,
-    "strictNullChecks": true
-  },
-  "include": [
-    "app/**/*"
-  ]
+    "compilerOptions": {
+        "outDir": "app/dist/js",
+        "target": "ES6",
+        "noEmitOnError": true,
+        "noImplicitAny": true,
+        "removeComments": true,
+        "strictNullChecks": true,
+        "experimentalDecorators": true
+    },
+    "include": ["app/src/**/*"]
 }
